@@ -1,3 +1,4 @@
+8/16/11 replace PolarImmutableVector2D with ImmutableVector.parseMagnitudeAndAngle
 8/16/11 add rotate cursor, for discussion
 8/16/11 use bond dipole instead of deltaEN in diatomic molecule and bond type indicator
 8/16/11 adjust canvas layouts
